--- a/.env
+++ b/.env
@@ -1,46 +1,32 @@
-APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=base64:7I06p4Q7qaX1XOAE/JG5BmtRY2osRm92iF9eS3ExiZY=
+APP_KEY=base64:GgwLwOrHh5UmI34Za874jkDVSNU2bb5SC3F9xZubSM4=
 APP_DEBUG=true
+APP_LOG_LEVEL=debug
 APP_URL=http://localhost
 
-LOG_CHANNEL=stack
-
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=d6rii63wp64rsfb5.cbetxkdyhwsb.us-east-1.rds.amazonaws.com
 DB_PORT=3306
-DB_DATABASE=laravel
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=scf4m4p838e05q3i
+DB_USERNAME=ghlrbgjsfdrxpx1k
+DB_PASSWORD=baed1sxfjkomjvjz
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
-QUEUE_CONNECTION=sync
 SESSION_DRIVER=file
-SESSION_LIFETIME=120
+QUEUE_DRIVER=sync
 
 REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_DRIVER=smtp
-MAIL_HOST=smtp.mailtrap.io
+MAIL_HOST=mailtrap.io
 MAIL_PORT=2525
 MAIL_USERNAME=null
 MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS=null
-MAIL_FROM_NAME="${APP_NAME}"
-
-AWS_ACCESS_KEY_ID=
-AWS_SECRET_ACCESS_KEY=
-AWS_DEFAULT_REGION=us-east-1
-AWS_BUCKET=
 
 PUSHER_APP_ID=
 PUSHER_APP_KEY=
 PUSHER_APP_SECRET=
-PUSHER_APP_CLUSTER=mt1
-
-MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
-MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
